--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
@@ -20,8 +23,7 @@
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.2.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-reanimated": "^2.3.1",
     "react-native-select-dropdown": "^1.6.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
